# AutomaticGrader

./: .gitignore  CLAUDE.md  CMakeLists.txt  Doxyfile  HW1_ROADMAP.md  HW2_ROADMAP.md  HW3_ROADMAP.md  HW4_ROADMAP.md  HW5_ROADMAP.md  HW6_ROADMAP.md  Lab1_ROADMAP.md  Lab2_ROADMAP.md  Lab3_ROADMAP.md  Lab4_ROADMAP.md  Lab5_ROADMAP.md  Lab6_ROADMAP.md  Lab7-1_ROADMAP.md  Lab7-2_ROADMAP.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  grade.reusable.yml  tests.yml
docs/: AUTOGRADER_INSTRUCTOR.md  getting-started.md  index.md
docs/architecture/: build-organisation.md  capture-pipeline.md  cooperative-driver.md  overview.md  stimulus-injection.md
docs/assets/js/: mermaid-init.js
docs/contributing/: add-a-checker.md  common-gotchas.md  four-phase-pattern.md  using-expectations.md  using-stimulus.md  validation-checklist.md
docs/reference/: cli-flags.md  cmake-options.md  cpp-api.md  manifest-format.md  python-tools.md
docs/workflow/: ci-cd.md  manifest-and-slots.md  reports.md
include/: F28379dSerial.h  F28x_Project.h  LEDPatterns.h  MatrixMath.h  OptiTrack.h  SE423Lib.h  device.h  driverlib.h  dsp.h  global_defs.h  lidar.h  song.h  ti_stubs.h  timer.h  xy.h
include/checks/: cli_args.h  compare_generated.hpp  expectations.h  format_parser.h  generated.hpp  hw1.h  hw2.h  hw3.h  hw4.h  hw5.h  json_escape.h  main_loop_driver.h  printf_capture.h  state_checker.h  stimulus.hpp  synthetic_clock.h  validator.h
include/fpu32/: fpu_rfft.h
lib/C2000Ware_4_01_00_00/device_support/f2837xd/examples/cpu1/FinalProjectwithCANAprilStarter/cpu01/ccs/: finalprojectwithCANAprilstarter.projectspec
lib/C2000Ware_4_01_00_00/device_support/f2837xd/examples/cpu1/HWstarter/cpu01/: .project_rel
lib/C2000Ware_4_01_00_00/device_support/f2837xd/examples/cpu1/HWstarter/cpu01/ccs/: HWstarter.projectspec
lib/C2000Ware_4_01_00_00/device_support/f2837xd/examples/cpu1/LABstarter/cpu01/: .project_rel
lib/C2000Ware_4_01_00_00/device_support/f2837xd/examples/cpu1/LABstarter/cpu01/ccs/: LABstarter.projectspec
lib/C2000Ware_4_01_00_00/device_support/f2837xd/examples/cpu1/XINTstarter/cpu01/: .project_rel
lib/C2000Ware_4_01_00_00/device_support/f2837xd/examples/cpu1/XINTstarter/cpu01/ccs/: XINTstarter.projectspec
lib/C2000Ware_4_01_00_00/device_support/f2837xd/headers/include/: F2837xD_pievect.h
lib/default/: buffer.h
lib/default/device/driverlib/: adc.h  clb.h  dac.h  dcsm.h  ecap.h  emif.h  epwm.h  flash.h  gpio.h  i2c.h  memcfg.h  sci.h  sdfm.h  sysctl.h
progress/: HW1_ROADMAP.md  HW2_ROADMAP.md  HW3_ROADMAP.md  HW4_ROADMAP.md  HW5_ROADMAP.md  HW6_ROADMAP.md  Lab1_ROADMAP.md  Lab2_ROADMAP.md  Lab3_ROADMAP.md  Lab4_ROADMAP.md  Lab5_ROADMAP.md  Lab6_ROADMAP.md  Lab7-1_ROADMAP.md  Lab7-2_ROADMAP.md
src/: LEDPatterns.c  MatrixMath.c  OptiTrack.c  SE423Lib.c  lidar.cpp  main.cpp  ti_stubs.cpp  user_xy.c
src/checks/: compare_generated.cpp  expectations.cpp  format_parser.cpp  generated.cpp  hw1.cpp  hw2.cpp  hw3.cpp  hw4.cpp  hw5.cpp  main_loop_driver.cpp  printf_capture.cpp  selftest.cpp  stat_checker.cpp  stimulus.cpp  synthetic_clock.cpp  validator.cpp
student_work/: LABstarter_main.c
tests/: CMakeLists.txt  test_cli_args.cpp  test_expectations.cpp  test_format_parser.cpp  test_json_escape.cpp  test_main.cpp  test_main_loop_driver.cpp  test_printf_capture.cpp  test_stimulus.cpp  test_synthetic_clock.cpp  test_validator.cpp
tests/python/: test_render_report.py  test_select_assignments.py
tools/: compare_validation.py  hash_map_setter.py  patch_student_source.py  render_report.py  select_assignments.py  validation.py
